--- a/latex/.gitignore
+++ b/latex/.gitignore
@@ -10,6 +10,8 @@
 ## Intermediate documents:
 *.dvi
 *-converted-to.*
+paper.ps
+paper.pdf
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
